# lib-agent-skills

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
agent_skills/: __init__.py  __main__.py  exceptions.py  models.py
agent_skills/adapters/: __init__.py  adk.py  langchain.py  tool_response.py
agent_skills/agent/: __init__.py  autonomous.py
agent_skills/cli/: main.py
agent_skills/discovery/: __init__.py  cache.py  index.py  scanner.py
agent_skills/exec/: __init__.py  local_sandbox.py  runner.py  sandbox.py
agent_skills/observability/: __init__.py  audit.py
agent_skills/parsing/: __init__.py  frontmatter.py  markdown.py
agent_skills/prompt/: __init__.py  claude_xml.py  json_renderer.py
agent_skills/resources/: __init__.py  reader.py  resolver.py
agent_skills/runtime/: __init__.py  handle.py  repository.py  session.py
docs/: autonomous_agent.md  tool_response_helpers.md
examples/: README.md  adk_integration.py  langchain_integration.py  security_policies.py  standalone_usage.py  tool_response_usage.py
examples/skills/api-client/: SKILL.md
examples/skills/api-client/references/: api-guide.md
examples/skills/api-client/scripts/: api-call.py
examples/skills/data-processor/: SKILL.md
examples/skills/data-processor/references/: api-docs.md  examples.json
examples/skills/data-processor/scripts/: process.py  setup.py  test.py
examples/test-skill/: SKILL.md
examples/test-skill/references/: example.md
examples/test-skill/scripts/: hello.py
tests/: __init__.py  conftest.py  test_audit.py  test_cache.py  test_cache_integration.py  test_claude_xml_renderer.py  test_cli.py  test_exceptions.py  test_frontmatter.py  test_frontmatter_integration.py  test_handle.py  test_handle_integration.py  test_indexer.py  test_indexer_integration.py  test_json_renderer.py  test_local_sandbox.py  test_local_sandbox_integration.py  test_markdown.py  test_models.py  test_reader.py  test_reader_integration.py  test_resolver.py  test_resolver_integration.py  test_runner.py  test_runner_integration.py  test_sandbox.py  test_scanner.py  test_scanner_integration.py  test_session.py  test_session_integration.py
tests/adapters/: test_adk.py  test_langchain.py  test_tool_response.py
tests/runtime/: test_repository.py
